<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.strangerfinder.strangerfinder.ChatActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroundchat">

    <!--Crear la nueva ActionBar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt_next"
            android:layout_weight="3"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="0dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_talking_with"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/lw_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:padding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_send"/>

    </LinearLayout>

</LinearLayout>
